<resources>
    <string name="app_name">ME:2</string>
    <string name="no_data_available">No data available</string>
    <string name="options_icon_char">⋮</string>
    <string name="project_name">Project name</string>
    <string name="project_description">Description</string>
    <string name="project_move_date">Move date</string>
    <string name="settings">Settings</string>
    <string name="toolbar_title_projects">Projects</string>
    <string name="moving_on">Moving on %1$s</string>
    <string name="moved_on">Moved on %1$s</string>
    <string name="project_items">Items</string>
    <string name="project_packs">Project packs</string>
    <string name="pack_list_header_name">Name</string>
    <string name="pack_list_header_size">Size</string>
    <string name="pack_list_header_qty">QTY</string>
    <string name="pack_list_header_subtotal">ST</string>
    <string name="pack_list_header_room">Room</string>
    <string name="pack_list_header_comment">Comment</string>
</resources>
