<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryLight"
    android:orientation="horizontal"
    android:paddingBottom="2dp"
    android:paddingLeft="@dimen/list_item_pack_horizontal_margin"
    android:paddingRight="@dimen/list_item_pack_horizontal_margin"
    android:paddingTop="2dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/pack_list_header_name"
        android:textColor="@android:color/white" />
    />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/pack_list_header_size"
        android:textColor="@android:color/white" />
    />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/pack_list_header_qty"
        android:textColor="@android:color/white" />
    />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/pack_list_header_room"
        android:textColor="@android:color/white" />
    />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/pack_list_header_comment"
        android:textColor="@android:color/white" />
    />
</LinearLayout>